src/scss/components/_targid.scss
/********************************************************************
 * Copyright (c) The Caleydo Team, http://caleydo.org
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 ********************************************************************/

main.targid {
  display: flex;

  -webkit-flex-direction: column;
  flex-direction: column;

  > div.wrapper {
    display: flex;
    flex-flow: row wrap;
    height: 100%;
  }
}


nav.mainNavi {
  display: flex;
  flex-direction: column;

  //opacity: .6;
  //transition: opacity linear 0.2s;
  transition: background linear 0.2s;

  &+.targid {
    opacity: 1;
    transition: opacity linear 0.2s;
  }

  &:hover {
    //opacity: 1;
    background-color: $core_colour;

    &+.targid {
      opacity: .4;
    }
  }

  a {
    color: $core_colour_text;

    &:active,
    &:focus,
    &:hover {
      color: $hover-color;
    }
  }

  > div {
    margin-top: 10px;
    padding-top: 5px;
    border-top: 1px solid $core_border;

    &:nth-of-type(1) {
      margin-top: 0; // remove margin for first div
      border-top: none;
    }

    > span {
      color: #666;
      font-size: 10px;
      padding: 0 5px;
      text-align: center;
      width: 100%;
      display: block;
    }

    ul {
      margin: 0;
      padding: 0;
      list-style: none;

      //flex: 1 auto;

      display: flex;
      flex-direction: column;

      .panel {
        position: absolute;
        left: 60px;
        //top: 0;
        //bottom: 0;
        margin: 0;
        padding: 0 0 6px 0;
        z-index: 8;
        background-color: #fff;
        min-width: 150px;

        opacity: 0;
        visibility: hidden;
        transition: opacity ease .25s;

        &:after {
          content: " ";
          background: transparent;
          position: absolute;
          z-index: -1;
          top: -20px;
          left: -20px;
          right: -20px;
          bottom: -20px;
        }

        .panel-heading {
          font-size: 16px;
          font-weight: 500;
          padding: 7px 15px 4px 15px;

          &:before {
            content: "\f0da";
            font-family: "FontAwesome", serif;
            font-size: 18px;
            color: #adadad;
            position: absolute;
            top: 0;
            left: -18px;
            height: 35px;
            display: flex;
            justify-content: center;
            align-items: center;
          }
        }

        table {
          margin-top: -15px;
        }

        ul {
          margin: -15px;
          padding: 0;
          list-style: none;

          &:empty {
            margin: 0;
          }

          &:not(:empty) + div {
            margin-top: 25px;
            margin-bottom: -5px;
          }

          li {
            margin: 0;
            padding: 0;

            > a {
              display: block;
              padding: 5px 15px;
              text-decoration: none;
              font-weight: 500;
              width: 100%;

              &:before {
                margin-right: 8px;
                content: "\f105";
                font-family: "FontAwesome", serif;
              }

              &:active,
              &:hover,
              &:focus {
                background: $core_colour;
              }
            }
          }
        }
      }

      > li {
        margin: 2px 0;
        padding: 0;

        display: flex;
        justify-content: center;

        > button {
          position: relative;
          display: block;
          padding: 2px 0;
          margin: 0 5px;
          width: 35px;
          height: 35px;
          line-height: 30px;

          &:hover {
            background-color: #fff;
          }
        }

        &:hover {
          > button {
            border-color: #adadad;
          }

          .panel {
            opacity: 1;
            visibility: visible;
          }
        }
      }
    }
  }
}


// see also src/internal/constants
$mode-animation-time: 500ms;


div.filmstrip {
  flex: 1;

  display: flex;
  flex-flow: row;
  position: relative;
  overflow-x: auto;
  overflow-y: hidden;

  > .viewWrapper {
    position: relative;
    flex: none;

    border-top: 1px solid #ddd;

    display: flex;
    flex-direction: row;

    width: 50%;
    overflow: hidden;
    transition: width $mode-animation-time ease;

    // first view should have width:100%
    &:nth-child(1):last-child {
      width: 100%;
    }

    &.t-focus {
      width: 70%;
    }

    &.t-context {
      width: 30%;

      // hide parameters in context view
      > .view > .parameters {
        opacity: 0;
        display: none;
      }
    }

    &.t-hide {
      width: 30%;

      > .view > .parameters {
        opacity: 0;
        display: none;
      }
    }

    > .view {
      flex: 1;
      position: relative;
      overflow: hidden;

      //transition: width 0.3s ease;
      //border-top: 8px solid #fff;

      > .inner,
      > .parameters,
      button.close {
        margin: 10px;
      }

      > .parameters {
        opacity: 1;
        transition: opacity 0.3s ease;
        p {
          margin: 5px 0;
        }
      }

      > .parameters:not(.hidden) ~ .inner {
        border-top: 1px solid $core_border;
        padding-top: 10px;
        position: absolute;
        top: 45px;
        bottom: 0;
        left: 0;
        right: 0;
        overflow-y: auto;
        display: flex;

        > .tdp-view {
          flex: 1 1 auto;
        }
      }

      > div {
        transition: opacity 0.3s ease;
      }
    }

    /*&.t-hide > .view > div {
      opacity: 0.2;
    }

    &.t-context > .view {
      //border-top: 8px solid lighten($core_border, 10%);

      > div {
        opacity: 0.6;
      }
    }

    &.t-focus > .view {
      //border-top: 8px solid lighten($core_border, 5%);

      > div {
        opacity: 1;
      }
    }

    > .view:hover > div {
      opacity: 1;
    }*/

    > .chooser {
      max-height: calc(100vh - 36px - 38px); // viewport height - header - history
      flex: 0 0 15em;
      background-color: $core_colour;
      text-align: center;
      position: relative;
      overflow-y: auto;
      padding: 8px 0;
      font-size: 12px;

      &.hidden {
        display: none;
      }

      .category {
        &:not(:first-child) {
          margin-top: 4px;
          padding-top: 8px;
        }

        header h1 {
          font-size: 1.2em;
          margin: 0;
        }
      }

      button {
        width: 100%;
        padding: 10px 0;
        white-space: normal;
        border-radius: 0;
        line-height: 1;
        border: 1px solid #ccc;

        &:active,
        &:focus,
        &:hover {
          background: lighten($core_colour, 3%);
          border-color: $hover-data-color;
        }

        &[disabled] {
          //opacity: 0.3;
          background: transparent;
          border-color: $core_border;
        }

        &.active {
          background-color: $select-color-bright;
        }
      }
    }

    @import '~tdp_core/dist/scss/components/view';
  }
}

